fixed an issue in the code, each flower and lext had to be placed into separate info classes, this is because the items container aligns only one box, so it needs more boxes inside to align them properly, earlier version had each text aligned which is not the right way to do it.

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
-  font-family: 'Courier New', Courier, monospace; text-align: center;
+  font-family: 'Courier New', Courier, monospace; 
+  text-align: center;
 }
 
 img {
@@ -10,18 +11,17 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  margin-bottom: 36px;
+  margin-bottom: 32px;
 }
 
 .items {
   display: flex;
-  align-items: center;
   justify-content: center;
-  margin: 52px;
 }
 
 .info {
   max-width: 200px;
+  text-align: center;
 }
 
 /* do not edit this footer */
